--- a/app.json
+++ b/app.json
@@ -1,12 +1,35 @@
 {
   "pages": [
-     "pages/show/show",
-    "pages/canvas/canvas"
+     "pages/tabs/tabs",
+     "pages/canvas/canvas",
+     "pages/show/show"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "微信小程序",
     "navigationBarTextStyle": "black"
+  },
+  "tabBar": {
+    "color":"#666",
+    "selectedColor":"#f60",
+    "backgroundColor":"#eee",
+    "borderStyle":"white",
+    "position":"bottom",
+    "fontSize":"30",
+    "list": [
+      {
+        "pagePath": "pages/tabs/tabs",
+        "text": "tabs",
+        "iconPath": "images/tabs.png",
+        "selectedIconPath":"images/tabs-active.png"
+      },
+      {
+        "pagePath": "pages/canvas/canvas",
+        "text": "canvas",
+        "iconPath": "images/canvas.png",
+        "selectedIconPath": "images/canvas-active.png"
+      }
+    ]
   }
 }
